# game-narrative-script

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: bin.rs  grammar.pest  lib.rs  main.rs  script_parser.rs  source.gcs
src/compiler/: error.rs  mod.rs  walker.rs
