[package]
name = "game-narrative-script"
version = "0.1.0"
authors = ["liquidscorpio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { version = "2.1.3" }
pest_derive = { version = "2.1.0" }
log = { version = "0.4.8" }
env_logger = { version = "0.7.1" }
serde = { version = "1.0.103", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = { version = "1.0.42" }
snap = { version = "1" }
